# elo_workflow

./: .dockerignore  .gitignore  Docker.md  Dockerfile  LICENSE  README.md  app_dashboard.py  carregar_respostas.py  download_drive.py  generate_json.py  gerenciador.py  igreja_dados.db  load_acolhedores.py  load_database.py  main.py  package.json  process_replies.py  processar_e_gerar_json_respostas.py  pyproject.toml  send_emails.py  setup.cfg  setup_database.py  upload_drive.py
.github/workflows/: docker-image.yml  release.yml
elo/database/: load_acolhedores.py  load_database.py  load_gps.py  setup_database.py  utils.py
elo/services/: auth.py  download_drive.py  generate_json.py  gerar_acolhedores_csv.py  upload_drive.py
src/eloApp/: app_dashboard.py  build_environment.py  cli.py
src/eloApp/elo/database/: load_database.py  setup_database.py
src/eloApp/elo/services/: carregar_respostas.py  download_drive.py  process_replies.py  processar_e_gerar_json_respostas.py  send_allocation.py  send_emails.py
